grammar.js
    program: ($) => repeat($._top_decl),

    // ── Top-level declarations ──────────────────────────────────────────
    _top_decl: ($) =>
      choice(
        $.type_def_decl,
        $.enum_type_def_decl,
        $.event_decl,
        $.event_set_decl,
        $.interface_decl,
        $.impl_machine_decl,
        $.spec_machine_decl,
        $.fun_decl,
        $.pure_decl,
        $.named_module_decl,
        $.test_decl,
        $.implementation_decl,
        $.global_param_decl,
        // PVerifier top-level declarations
        $.invariant_decl,
        $.invariant_group_decl,
        $.axiom_decl,
        $.assume_on_start_decl,
        $.proof_block_decl,
      ),

    // ── Type definitions ────────────────────────────────────────────────
    impl_machine_decl: ($) =>
      seq(
        "machine",
        field("name", $.identifier),
        repeat($.receives_sends),
        $.machine_body,
      ),

    machine_body: ($) => seq("{", repeat($._machine_entry), "}"),

    _machine_entry: ($) =>
      choice($.var_decl, $.fun_decl, $.state_decl),

    // ── Variable declarations ───────────────────────────────────────────
    var_decl: ($) => seq("var", $.iden_list, ":", $._type, ";"),

    iden_list: ($) => sep1($.identifier, ","),

    // ── Function declarations ───────────────────────────────────────────
    fun_decl: ($) => choice($.foreign_fun_decl, $.p_fun_decl),

    p_fun_decl: ($) =>
      seq(
        "fun",
        field("name", $.identifier),
        "(",
        optional($.fun_param_list),
        ")",
        optional(seq(":", $._type)),
        $.function_body,
      ),

    fun_param_list: ($) => sep1($.fun_param, ","),

    fun_param: ($) =>
      seq(field("name", $.identifier), ":", field("type", $._type)),

    // ── Pure function declarations (PVerifier) ──────────────────────────
    state_decl: ($) =>
      seq(
        optional("start"),
        optional(field("temperature", choice("hot", "cold"))),
        "state",
        field("name", $.identifier),
        "{",
        repeat($._state_body_item),
        "}",
      ),

    _state_body_item: ($) =>
      choice(
        $.state_entry,
        $.state_exit,
        $.state_defer,
        $.state_ignore,
        $.on_event_do_action,
        $.on_event_goto_state,
      ),

    state_entry: ($) =>
      seq(
        "entry",
        choice(
          $.anon_event_handler,
          seq(field("fun_name", $.identifier), ";"),
        ),
      ),

    anon_event_handler: ($) =>
      seq(optional(seq("(", $.fun_param, ")")), $.function_body),

    function_body: ($) =>
      seq("{", repeat(choice($.var_decl, $._statement)), "}"),

    // ── Statements ──────────────────────────────────────────────────────
    _statement: ($) =>
      choice(
        $.compound_stmt,
        $.assert_stmt,
        $.assume_stmt,
        $.print_stmt,
        $.return_stmt,
        $.break_stmt,
        $.continue_stmt,
        $.assign_stmt,
        $.insert_stmt,
        $.add_stmt,
        $.remove_stmt,
        $.while_stmt,
        $.foreach_stmt,
        $.if_stmt,
        $.ctor_stmt,
        $.fun_call_stmt,
        $.raise_stmt,
        $.send_stmt,
        $.announce_stmt,
        $.goto_stmt,
        $.receive_stmt,
        $.no_stmt,
      ),

    print_stmt: ($) => seq("print", field("message", $._expr), ";"),

    return_stmt: ($) => seq("return", optional($._expr), ";"),

    assign_stmt: ($) =>
      seq($.lvalue, "=", field("rvalue", $._expr), ";"),

    send_stmt: ($) =>
      seq(
        "send",
        field("machine", $._expr),
        ",",
        field("event", $._expr),
        optional(seq(",", $.rvalue_list)),
        ";",
      ),

    lvalue: ($) =>
      prec.left(
        PREC.ACCESS,
        choice(
          field("name", $.identifier),
          seq($.lvalue, ".", field("field", $.identifier)),
          seq($.lvalue, ".", field("index", $.int_literal)),
          seq($.lvalue, "[", $._expr, "]"),
        ),
      ),

    // ── Expressions ─────────────────────────────────────────────────────
    _expr: ($) =>
      choice(
        $._primitive,
        $.string_literal,
        $.unnamed_tuple_expr,
        $.named_tuple_expr,
        $.paren_expr,
        $.named_tuple_access_expr,
        $.tuple_access_expr,
        $.seq_access_expr,
        $.keyword_expr,
        $.ctor_expr,
        $.fun_call_expr,
        $.unary_expr,
        $.bin_expr,
        $.cast_expr,
        $.choose_expr,
        $.format_expr,
        // PVerifier expressions
        $.quant_expr,
        $.is_expr,
        $.targets_expr,
        $.inflight_expr,
        $.sent_expr,
      ),

    paren_expr: ($) => seq("(", $._expr, ")"),

    named_tuple_access_expr: ($) =>
      prec.left(
        PREC.ACCESS,
        seq($._expr, ".", field("field", $.identifier)),
      ),

    seq_access_expr: ($) =>
      prec.left(
        PREC.ACCESS,
        seq(
          field("seq", $._expr),
          "[",
          field("index", $._expr),
          "]",
        ),
      ),

    keyword_expr: ($) =>
      choice(
        seq("keys", "(", $._expr, ")"),
        seq("values", "(", $._expr, ")"),
        seq("sizeof", "(", $._expr, ")"),
        seq("default", "(", $._type, ")"),
      ),

    ctor_expr: ($) =>
      prec(
        PREC.CALL,
        seq("new", $.identifier, "(", optional($.rvalue_list), ")"),
      ),

    fun_call_expr: ($) =>
      prec(
        PREC.CALL,
        seq(
          field("fun", $.identifier),
          "(",
          optional($.rvalue_list),
          ")",
        ),
      ),

    unary_expr: ($) =>
      prec(PREC.UNARY, seq(choice("-", "!"), $._expr)),

    bin_expr: ($) =>
      choice(
        prec.left(
          PREC.MUL,
          seq($._expr, choice("*", "/", "%"), $._expr),
        ),
        prec.left(
          PREC.ADD,
          seq($._expr, choice("+", "-"), $._expr),
        ),
        prec.left(
          PREC.COMP,
          seq($._expr, choice("<", ">", ">=", "<=", "in"), $._expr),
        ),
        prec.left(PREC.EQ, seq($._expr, choice("==", "!="), $._expr)),
        prec.left(PREC.LAND, seq($._expr, "&&", $._expr)),
        prec.left(PREC.LOR, seq($._expr, "||", $._expr)),
        // PVerifier logical operators
        prec.right(PREC.LTHEN, seq($._expr, "==>", $._expr)),
        prec.left(PREC.LIFF, seq($._expr, "<==>", $._expr)),
      ),

    cast_expr: ($) =>
      prec.left(PREC.CAST, seq($._expr, choice("as", "to"), $._type)),

    choose_expr: ($) => seq("choose", "(", optional($._expr), ")"),

    // PVerifier: forall/exists quantifier expressions
    quant_expr: ($) =>
      prec.right(
        seq(
          choice("forall", "exists"),
          optional("new"),
          "(",
          $.fun_param_list,
          ")",
          "::",
          field("body", $._expr),
        ),
      ),

    // PVerifier: type test expression (e is Type)
    named_tuple_expr: ($) =>
      seq("(", sep1($.named_tuple_field, ","), optional(","), ")"),

    named_tuple_field: ($) =>
      seq(field("name", $.identifier), "=", field("value", $._expr)),

    format_expr: ($) =>
      seq(
        "format",
        "(",
        $.string_literal,
        optional(seq(",", $.rvalue_list)),
        ")",
      ),

    rvalue_list: ($) => sep1($._expr, ","),

    // ── Primitives ──────────────────────────────────────────────────────
    float_literal: ($) =>
      choice(
        token(seq(optional(/[0-9]+/), ".", /[0-9]+/)),
        seq(
          "float",
          "(",
          field("base", $.int_literal),
          ",",
          field("exp", $.int_literal),
          ")",
        ),
      ),

    bool_literal: ($) => choice("true", "false"),

    null_literal: ($) => "null",

    nondet: ($) => "$",

    fairnondet: ($) => "$$",

    this_keyword: ($) => "this",

    // ── Types ───────────────────────────────────────────────────────────
    _type: ($) =>
      choice(
        $.seq_type,
        $.set_type,
        $.map_type,
        $.tuple_type,
        $.named_tuple_type,
        $.primitive_type,
        $.named_type,
      ),

    seq_type: ($) => seq("seq", "[", $._type, "]"),

    map_type: ($) =>
      seq(
        "map",
        "[",
        field("key_type", $._type),
        ",",
        field("value_type", $._type),
        "]",
      ),

    primitive_type: ($) =>
      choice(
        "bool",
        "int",
        "float",
        "string",
        "event",
        "machine",
        "data",
        "any",
      ),

    named_type: ($) => field("name", $.identifier),

    // ── Module system ───────────────────────────────────────────────────
    invariant_decl: ($) =>
      seq(
        "invariant",
        field("name", $.identifier),
        ":",
        field("body", $._expr),
        ";",
      ),

    // ── PVerifier: invariant groups (Lemma / Theorem) ───────────────────
    invariant_group_decl: ($) =>
      seq(
        choice("Lemma", "Theorem"),
        field("name", $.identifier),
        "{",
        repeat($.invariant_decl),
        "}",
      ),

    // ── PVerifier: axiom declarations ───────────────────────────────────
    axiom_decl: ($) => seq("axiom", field("body", $._expr), ";"),

    // ── PVerifier: init-condition declarations ──────────────────────────
    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    int_literal: ($) => /[0-9]+/,

    string_literal: ($) =>
      seq('"', repeat(choice(/[^"\\]+/, $.escape_sequence)), '"'),

    escape_sequence: ($) => token.immediate(/\\./),

    // ── Comments ────────────────────────────────────────────────────────
